added unit tests for deletAllOrders API
